# Newton2d_Visualize

./: CMakeLists.txt  document.tex  imgui.ini  result.txt
include/: GLinclude.h  glsl.h  newton2d.h  visualize.h
shader/: frag.glsl  func_frag.glsl  func_vert.glsl  point_frag.glsl  point_vert.glsl  vert.glsl
src/: glsl.cpp  main.cpp  newton2d.cpp  visualize.cpp
